# Weather_Forecasting

./: .gitignore  Estructura_Proyecto.md  Presentacion.md  README.md  SWF.bat  contenido_repo.md  main.py  main_antiguo_ejemplo.py  pyproject.toml  requirements.txt
src/: DOCUMENTACION.py  main.py
src/dashboard/: app - copia.py  app.py
src/dashboard/correlations/: calculate_p_value.py  evaluate.py  generate_correlation.py
src/dashboard/data_analysis/: data_analysis.py  eda.py  show_evaluation.py  visualize_data.py
src/dashboard/logic/: prediction_engine.py
src/dashboard/ui/: cards.py  styles.py
src/data/: Add features.md  add_lags.py  compilar.py  unir_json.py
src/data/processed/: TablaDatos.md  data_weather.csv  data_weather_final.csv  data_weather_oficial.csv
src/data/raw/: README.md  (+6 more)
src/models/: __init__.py  comparate.py  evaluation.py  features_lluvia.joblib  features_lluvia.pkl  features_tmax.joblib  features_tmax.pkl  features_tmin.joblib  features_tmin.pkl  model_lluvia_LR.pkl  model_lluvia_RF.pkl  modelo_lluvia_lr.pkl  prediccion.py  prueba.py  scaler_lluvia.pkl  train_model.py  train_model_precipitation.py  train_model_temp_max.py  train_model_temp_min.py  umbral_lluvia.pkl
src/scripts/: README.md  __init__.py  correlation.py  download_data.py  eda.py  prediction.py  prediction_engine.py  show_data.py
src/utils/: Modificar.md  README.md  __init__.py  cargar_datos.py  compilar.py  data_analysis.py  fusionar csv.py  import json.py  imputar_datos.py  limpieza.py  p_value.py  p_value_2.py  recommendations.py  show_evaluation.py  visualize_data.py
(+47 files in other folders)
