[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-forecasting"
version = "0.1.0"
description = "Weather forecasting and analysis system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ruff>=0.14.8",
    "streamlit>=1.52.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "prophet>=1.2.1",
    "plotly>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
dashboard = [
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "dash>=2.14.0",
]
models = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "tensorflow>=2.13.0",
]
[tool.hatch.build.targets.wheel]
packages = ["src"]
